# ComfyUI-Nuvu

./: .gitignore  README.md  __init__.py  changelog.json  linux_install_nuvu_comfyui.sh  pre_launch.py  prestartup_script.py  pyproject.toml  requirements.txt  windows_install_nuvu_comfyui.bat  windows_install_portable_nuvu.bat
.github/workflows/: publish-to-registry.yml
Docker/: Dockerfile  build.sh  entrypoint.sh  push.sh  run.sh
web/: comfyui-nuvu.css  nuvu.css  nuvu.js
web/auth/: callbacks.js  logout.js  oauth.js  session.js  storage.js
web/core/: config.js  constants.js  matcher.js  preload.js  state.js
web/customNodes/: api.js
web/device/: api.js
web/license/: status.js
web/models/: api.js  download.js  selection.js
web/ui/: dialog.js  miniQueueProgress.js  splash.js  systemPrompts.js
web/ui/components/: Button.js  Modal.js  core.js
web/vue/: auth-B3TudLyo.js  auth-BUFW8dE-.js  auth-BtQdb95x.js  auth-C4IjPd5n.js  auth-CByID8cS.js  auth-CT42OsLi.js  auth-Cf7WEeVG.js  auth-CsaEcwp5.js  auth-CweEAsC8-zN_PN6cE.js  auth-D2wmH69l.js  auth-DzAMYQbl.js  auth-XzCTsR8_.js  auth-fsrharVQ.js  comfyui-nuvu.css  main-BKxobGeA.js  main-BMCcryf5.js  main-BuGjKQ3f.js  main-C3Id9iGH.js  main-CZs45P_W.js  main-Cs_Dl7H7.js  main-D7HFDi-v.js  main-DFDqHPrd.js  main-DG5XhcVJ.js  main-DGvxSmG9.js  main-DkPxtKew.js  main-TLYbuVJv.js  nuvu-DbBYfa-o.js  nuvu.js
web/workflows/: analyzer.js  api.js  installation.js  selection.js
